fixed overflow issue on smaller phone screens

--- a/app/scss/_accordian.scss
+++ b/app/scss/_accordian.scss
@@ -1,6 +1,6 @@
 #accordian {
   overflow: auto;
-  height: 76%;
+  height: 62%;
 
   img {
     float: right;
